# django_project_med_teste

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/config/: settings.py  urls.py
src/profissionalsaude/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/profissionalsaude/migrations/: 0001_initial.py  0002_consulta.py
